# qualitas

./: .editorconfig  .gitignore  .markdownlint.jsonc  .prettierignore  AGENT_CONTEXT.md  CHANGELOG.md  CONTRIBUTING_LANGUAGE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  eslint.config.js  jest.config.js  package-lock.json  package.json  qualitas.config.js  qualitas_napi.js  qualitas_ts.js  tsconfig.build.json  tsconfig.json
.changeset/: README.md  add-go-language-adapter.md  add-java-adapter.md  common-lions-grin.md  config.json  cute-dryers-guess.md  dry-rocks-pick.md  eighty-monkeys-hope.md  fifty-yaks-smash.md  fix-exclude-merge.md  fix-go-loc-counting.md  fix-java-dc.md  fix-utf8-panic.md  forty-games-study.md  fruity-candles-mate.md  hot-cars-judge.md  humble-zebras-trade.md  java-braceless-body-fix.md  lazy-singers-serve.md  lockfile-sync.md  lovely-rats-tie.md  mighty-groups-grin.md  plain-poets-rush.md  pre-push-lockfile-check.md  revert-lockfile-sync.md  silly-houses-burn.md  sixty-garlics-wear.md  social-lions-fetch.md  sweet-rockets-cough.md  twenty-friends-sing.md  warm-drinks-joke.md  wise-meteors-exist.md  yummy-parents-stand.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  release.yml
crates/qualitas-cli/: Cargo.toml
crates/qualitas-cli/src/: config.rs  main.rs
crates/qualitas-cli/src/reporters/: compact.rs  json.rs  markdown.rs  mod.rs  summary.rs  text.rs
crates/qualitas-core/: Cargo.toml
crates/qualitas-core/src/: analyzer.rs  constants.rs  lib.rs  types.rs
crates/qualitas-core/src/ir/: language.rs
crates/qualitas-core/src/languages/: conformance.rs  mod.rs  rust.rs  typescript.rs
crates/qualitas-core/src/languages/go/: cognitive_flow_tests.rs  conformance_tests.rs  data_complexity_tests.rs  dependency_coupling_tests.rs  go_adapter.rs  identifier_refs_tests.rs  mod.rs  structural_tests.rs
crates/qualitas-core/src/languages/java/: cognitive_flow_tests.rs  conformance_tests.rs  data_complexity_tests.rs  dependency_coupling_tests.rs  identifier_refs_tests.rs  java_adapter.rs  mod.rs  structural_tests.rs
crates/qualitas-core/src/languages/python/: cognitive_flow_tests.rs  conformance_tests.rs  data_complexity_tests.rs  dependency_coupling_tests.rs  identifier_refs_tests.rs  mod.rs  py_adapter.rs  structural_tests.rs
crates/qualitas-core/src/languages/rust/: cognitive_flow_tests.rs  conformance_tests.rs  data_complexity_tests.rs  dependency_coupling_tests.rs  identifier_refs_tests.rs  mod.rs  rs_adapter.rs  structural_tests.rs
crates/qualitas-core/src/languages/typescript/: cognitive_flow_tests.rs  conformance_tests.rs  data_complexity_tests.rs  dependency_coupling_tests.rs  identifier_refs_tests.rs  mod.rs  structural_tests.rs  ts_adapter.rs
crates/qualitas-core/src/metrics/: cognitive_flow.rs  data_complexity.rs  dependencies.rs  identifier_refs.rs  structural.rs
crates/qualitas-core/src/parser/: ast.rs
crates/qualitas-core/src/scorer/: composite.rs  mod.rs  thresholds.rs
crates/qualitas-napi/: Cargo.toml
crates/qualitas-napi/src/: lib.rs
hooks/: pre-commit  pre-push
js/: cli.ts  config.ts  index.ts  types.ts
js/reporters/: json.ts  markdown.ts  text.ts
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
scripts/: format.js  install-hooks.js  uninstall-hooks.js  version.sh
src/: analyzer.rs  constants.rs  lib.rs  types.rs
src/ir/: events.rs  language.rs  mod.rs
src/languages/: conformance.rs  mod.rs  typescript.rs
src/metrics/: cognitive_flow.rs  data_complexity.rs  dependencies.rs  identifier_refs.rs  mod.rs  structural.rs
src/parser/: ast.rs
src/scorer/: composite.rs  thresholds.rs
tests/_template/: README.md  adapter.test.template.ts
tests/fixtures/: data_heavy.ts  deeply_nested.ts  imported_coupling.ts  wide_scope_irc.ts
tests/js/: scorer.test.ts
tests/shared/: config.test.ts  project.test.ts  reporters.test.ts  scoring.test.ts
tests/typescript/: adapter.test.ts
tests/typescript/fixtures/: clean.ts  data_heavy.ts
