[package]
name = "qualitas-ts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4", "serde-json"] }
napi-derive = "2"
oxc_parser = "0.46"
oxc_ast = "0.46"
oxc_allocator = "0.46"
oxc_span = "0.46"
oxc_syntax = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
