[package]
name = "qualitas-ts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4", "serde-json"] }
napi-derive = "2"
oxc_parser = "0.46"
oxc_ast = "0.46"
oxc_allocator = "0.46"
oxc_span = "0.46"
oxc_syntax = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true

# ─── Lint configuration ──────────────────────────────────────────────────────
[lints.rust]
# Treat these as errors so they surface immediately in cargo check / CI
unused_imports     = "warn"
unused_variables   = "warn"
dead_code          = "warn"
unused_mut         = "warn"

[lints.clippy]
# Enable a useful subset of clippy lints
all         = { level = "warn", priority = -1 }  # clippy::all (correctness + style)
pedantic    = { level = "warn", priority = -1 }  # stricter checks

# Allow some pedantic lints that are noisy for this codebase
module_name_repetitions = "allow"  # e.g. CfcVisitor in cognitive_flow module
must_use_candidate      = "allow"  # not a public API library
missing_errors_doc      = "allow"  # docs are in README, not rustdoc
missing_panics_doc      = "allow"
cast_precision_loss     = "allow"  # intentional f64 casts for score math
cast_possible_truncation= "allow"  # intentional u32 casts for counts
cast_sign_loss          = "allow"
too_many_lines          = "allow"  # visitor impls are intentionally long
wildcard_imports        = "allow"  # `use oxc_ast::ast::*` is idiomatic for oxc
similar_names           = "allow"  # dc_raw/dci_raw, dc_penalty/dci_penalty are distinct concepts
match_same_arms         = "allow"  # keeping separate arms for clarity (e.g. "strict" profile)
struct_field_names      = "allow"  # ScoreBreakdown fields intentionally share _penalty suffix
needless_pass_by_value  = "allow"  # napi functions require owned String params
doc_markdown            = "allow"  # formulas in doc comments use math notation
