[package]
name = "qualitas-core"
version = "0.1.0"
edition = "2021"
description = "Core analysis library for qualitas — language-agnostic code quality measurement"

[lib]
name = "qualitas_core"

[dependencies]
oxc_parser = "0.46"
oxc_ast = "0.46"
oxc_allocator = "0.46"
oxc_span = "0.46"
oxc_syntax = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
